# trading-arena

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  app.py  backend_smoke_check.py  pyproject.toml
backend/: accounts.py  accounts_client.py  accounts_server.py  api.py  database.py  manish_trader.py  market.py  market_server.py  mcp_servers.py  reset.py  roster.py  runtime_commands.py  templates.py  tracers.py  traders.py  trading_arena.py
backend/interfaces/: trader.py
backend/researchers/: __init__.py  manish_research_team.py
dashboard/: ui.py  util.py
docs/: architecture.md  configuration.md  design.md  developer_notes.md  how_to_participate.md  manish_multi_researcher_workflow.md  mcp_servers.md  requirements.md  running.md
script/: start.ps1  start.sh  stop.ps1  stop.sh
tests/: test_dashboard_leaderboard.py  test_manish_workflow.py
