[project]
name = "trading-arena"
version = "0.1.0"
description = "Autonomous trading arena"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "gradio>=6.20.0",
    "mcp",
    "openai",
    "openai-agents",
    "pydantic",
    "python-dotenv",
    "uvicorn[standard]",
    "yfinance",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend", "dashboard"]
